k8s/applications/proxmox/overlays/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-pve01
  namespace: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-pve02
  namespace: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8006
